--- a/boston.html
+++ b/boston.html
@@ -30,11 +30,16 @@
         <img src = "images/b_campus.jpg" alt = "brandeis campus picture 1" width="200">
         <img src = "images/b_campus_2.jpg" alt = "brandeis campus pictrue 2" width="200">
 
-        <p> For the first few days of my college life, coming to an unfamiliar place made me a little bit homesick. I did not feel a sense of belonging or feeling at home until I received a warm welcome letter posted on my dorm door from my orientation leader. The interesting card content and the lovely drawing of a sheep gave me an instant sense of belonging on campus and made me feel at home. My orientation leader has played an important role in making me adapt to college life quickly. </p>
+        <p> For the first few days of my college life, coming to an unfamiliar place made me a little bit homesick. I did not feel a sense of belonging or feeling at home until I received a warm welcome letter posted on my dorm door from my orientation leader.  </p>
+        <p>
+            The interesting card content and the lovely drawing of a sheep gave me an instant sense of belonging on campus and made me feel at home. My orientation leader has played an important role in making me adapt to college life quickly.
+        </p>
         <img src = "images/b_welcome_letter.jpg" alt = "welcome letter from orientation leader at Brandeis" width="200">
 
 
-        <p>During the orientation, we were also invited to visit the famous Charles River in Boston. The image below is the Charles river in Boston. You would also be able to see Harvard University and MIT on both sides of the river. On the weekends, I sometimes go to downtown Boston with my friends to relax ourselves through going shopping and tasting delicious food. </p>
+        <p>During the orientation, we were also invited to visit the famous Charles River in Boston. The image below is the Charles river in Boston. You would also be able to see Harvard University and MIT on both sides of the river. </p>
+        <p>On the weekends, I sometimes go to downtown Boston with my friends to relax ourselves through going shopping and tasting delicious food.</p>
+        
         <img src = "images/b_river.jpg" alt = "picture of charles river in Boston" width="200">
         <img src = "images/shakeshack.jpg" alt = "picture of shakeshack" width="200">
         <img src = "images/boston_streets_2.jpg" alt = "boston streets" width = "200">
